# BMP-C

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bmpfile.c  bmpfile.h  test.c
